EDGE-308 Greedy Placement
