# src/placement_controller/resource_fixture.py
@@ -48,3 +48,23 @@ class ResourceTestFixture:
                 },
             },
         }
+
+    def make_node(self, name: str, cpu: int, memory: int, ephemeral_storage: int, gpu: int) -> Dict[str, Any]:
+        allocatable = {
+            "cpu": str(cpu),
+            "memory": str(memory),
+            "ephemeral-storage": str(ephemeral_storage),
+        }
+        if gpu > 0:
+            allocatable["nvidia.com/gpu"] = str(gpu)
+        return {
+            "apiVersion": "v1",
+            "kind": "Node",
+            "metadata": {
+                "name": name,
+            },
+            "spec": {"podCIDR": "192.168.1.0/24"},
+            "status": {
+                "allocatable": allocatable,
+            },
+        }
